--- a/src/scss/colortheme/cs-navigation.scss
+++ b/src/scss/colortheme/cs-navigation.scss
@@ -12,7 +12,7 @@
 }
 
 .toggle-menu span {
-    background-color: $color-p2 !important;
+    background-color: $gray-600 !important;
 }
 
 .mobile-control {
