--- a/src/scss/colortheme/santacruz.scss
+++ b/src/scss/colortheme/santacruz.scss
@@ -45,7 +45,7 @@ $body-color:            #1d4d4c;        // Background base and typically the pag
 $body-midline:          $color-s3;      // Midline gradient color
 $edge-border:           $body-color;    // Applied to outer edge of the page
 $header-icon:           $color-p2;      // Icon left of main content H1
-$mobile-controls:		$color-p2;		    // Mobile controls
+$mobile-controls:				$gray-600;		    // Mobile controls
 $footer-txt:            #fff;           // Color of text and links in the footer
 
 $overstated-header-bg:          $color-p2;      // Background for panel header
