--- a/src/scss/colortheme/santabarbara.scss
+++ b/src/scss/colortheme/santabarbara.scss
@@ -43,7 +43,7 @@ $body-color: #07537b; // Background base and typically the page edge border
 $body-midline: $color-s2; // Midline gradient color
 $edge-border: $body-color; // Applied to outer edge of the page
 $header-icon: $color-p2; // Icon left of main content H1
-$mobile-controls: $color-p2; // Mobile controls
+$mobile-controls: 		$gray-600; // Mobile controls
 $footer-txt: #fff; // Color of text and links in the footer
 
 $panel-border: #ddd;
