--- a/src/_includes/modules/alert-banner-beta-feedback.html
+++ b/src/_includes/modules/alert-banner-beta-feedback.html
@@ -1,7 +1,7 @@
 <!-- /src/_includes/modules/alert-banner-beta-feedback.html -->
 <div class="alert alert-banner bg-standout" role="alert">
     <div class="container">
-        <span class="alert-level border brd-s1 px-3 m-r-md">BETA</span><span class="alert-text">We’d love your feedback
+        <span class="alert-level border brd-s1 px-3 m-r-md">BETA</span><span class="alert-text text-1rem">We’d love your feedback
             to make the template better. You have from November 4 to November 11. </span>
         <a href="https://airtable.com/shro9V6ry2Cf4mpgG" class="alert-link btn btn-default btn-xs bg-s1">Send feedback</a>
     </div>
