--- a/src/_includes/modules/blockquote-no-graphic.html
+++ b/src/_includes/modules/blockquote-no-graphic.html
@@ -1,4 +1,4 @@
-<blockquote>
+<blockquote class="no-quotation-mark">
  <p>Good quotes help to tell a story and enhance the credibility of a press release, news story, or speech. Words that
   are crafted well can leave a lasting impact on the world. </p>
  <footer>Holly Zuluaga</footer>
