--- a/src/_includes/layouts/components.njk
+++ b/src/_includes/layouts/components.njk
@@ -36,7 +36,7 @@
       {% endfor %}
       </ul>
   </li>
-  <li><a href="/css-shortcuts/css-units.html" id="components-list">CSS style shortcuts</a>
+  <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="components-list">CSS classes shortcuts</a>
  </ul>
 
 
