--- a/src/_includes/modules/list-unordered.html
+++ b/src/_includes/modules/list-unordered.html
@@ -1,5 +1,5 @@
 <ul>
- <li>List your first unrelated item here</li>
+ <li>List your first unrelated item here.</li>
  <li>Continue your list of unrelated items.</li>
  <li>Complete your list of unrelated items.</li>
 </ul>
