--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -1,4 +1,4 @@
-<div class="p-b-md p-t-sm section-standout">
+<aside class="p-b-md p-t-sm section-standout">
  <div class="container">
   <div class="row">
    <div class="col-md-4">
@@ -28,4 +28,4 @@
    </div>
   </div>
  </div>
-</div>
+</aside>
