--- a/src/_includes/modules/card-grid-icons.html
+++ b/src/_includes/modules/card-grid-icons.html
@@ -4,8 +4,7 @@
   <article class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md pos-rel">
    <div class="text-center  p-b">
     <span class="ca-gov-icon-clipboard color-p2 color-p2-hover text-huge d-block" aria-hidden="true"></span>
-    <a href="/visual-design/icons.html"
-     class="h4 m-t-0 m-b color-gray-dark link-before text-left no-underline d-block">Infographic</a>
+    <a href="#" class="h4 m-t-0 m-b color-gray-dark link-before text-left no-underline d-block">Infographic</a>
     <p class="color-gray-dark text-left">Commonly recognized by visitors and generally reserved for data-rich
      visualization.</p>
    </div>
