--- a/src/_includes/modules/modal.html
+++ b/src/_includes/modules/modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modal" role="dialog">
+<div class="modal fade" id="modal" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-lg">
   <div class="modal-content">
    <div class="modal-header">
