--- a/src/_includes/modules/alert-banner.html
+++ b/src/_includes/modules/alert-banner.html
@@ -1,11 +1,9 @@
-<div class="alert alert-warning alert-dismissible alert-banner" role="alert">
+<div class="alert alert-severe alert-dismissible alert-banner" role="alert">
     <div class="container">
-        <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close"><span
+        <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
                 class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
         <span class="alert-level"><span class="ca-gov-icon-important" aria-hidden="true"></span>SEVERE
-            ALERT!</span><span class="alert-text">2015-12-21, 10:17 AM - Flash Flood in Sacramento and Placer Counties
-            until 12:15 PM.</span>
-        <a href="" class="alert-link btn btn-default btn-xs">More Information</a>
-
+            ALERT!</span><span class="alert-text"> Flash flood in Sacramento until 12:15 PM.</span> <a href=""
+            class="btn btn-default btn-xs">Severe Alert</a>
     </div>
 </div>
