Update homepage, whats new, get started

--- a/src/_includes/modules/timeline-angled.html
+++ b/src/_includes/modules/timeline-angled.html
@@ -17,8 +17,8 @@
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
                     <div class="dot-text">
-                        <h3 class="h5 m-b">2021</h3>
-                        <p class="m-b-0">Release the beta version of the new statewide Design System</p>
+                        <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2021</h3>
+                        <p class="mb-0">Release the beta version of the new statewide Design System</p>
                     </div>
                 </div>
                 <!-- End Static Process -->
@@ -31,8 +31,8 @@
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
                     <div class="dot-text">
-                        <h3 class="h5 m-b">2022</h3>
-                        <p class="m-b-0">Update the State Web Template V6 to align with the Design System</p>
+                        <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2022</h3>
+                        <p class="mb-0">Update the State Web Template V6 to align with the Design System</p>
                     </div>
                 </div>
                 <!-- End Static Process -->
@@ -45,8 +45,8 @@
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
                     <div class="dot-text">
-                        <h3 class="h5 m-b">2023</h3>
-                        <p class="m-b-0">Release the first production version of the Design System</p>
+                        <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2023</h3>
+                        <p class="mb-0">Release the first production version of the Design System</p>
                     </div>
                 </div>
                 <!-- End Static Process -->
@@ -59,8 +59,8 @@
                         <span class="dot-line-inner bg-grey-light brd-gray-light"></span>
                     </i>
                     <div class="dot-text">
-                        <h3 class="h5 m-b">2024+</h3>
-                        <p class="m-b-0">Continue to improve the Design System and support a transition to it</p>
+                        <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2024+</h3>
+                        <p class="mb-0">Continue to improve the Design System and support a transition to it</p>
                     </div>
                 </div>
                 <!-- End Static Process -->
@@ -81,6 +81,14 @@
     .dot-line::after,
     .dot-line::before {
         width: 100%;
+    }
+    .brd-primary-light-after::after,
+    .brd-primary-light-before::before {
+        border-color: #BCBBC1 !important;
+    }
+    .dot-line::after,
+    .dot-line::before {
+        border-top-width: 2px;
     }
     @media (max-width: 767px) {
         .dot-text,
