--- a/src/_includes/modules/section-icon-blocks.html
+++ b/src/_includes/modules/section-icon-blocks.html
@@ -2,7 +2,7 @@
 <div style="background:#EDEDEF;">
 	<div class="container p-t-lg">
 		<div class="row">
-			<div class="third m-b-lg round-card color-primary-hover">
+			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
 				<a href="/components.html" class="no-underline d-block p-a-md color-gray-dark"
 					title="Browse components">
@@ -13,17 +13,17 @@
 				</a>
 				<!-- End Icon Blocks -->
 			</div>
-			<div class="third m-b-lg round-card color-primary-hover">
+			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
 				<a href="/visual-design/icons.html#Search-icons" class="no-underline d-block p-a-md color-gray-dark" title="Search icons">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/search-icons.svg" alt="" style="width:138px;">
-						<h2 class="h5 m-b-sm m-t-0 color-primary-hover">Search icons</h2>
+						<h2 class="h5 m-b-sm m-t-0">Search icons</h2>
 					</div>
 				</a>
 				<!-- End Icon Blocks -->
 			</div>
-			<div class="third m-b-lg round-card color-primary-hover">
+			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
 				<a href="/visual-design/color.html#ColorThemes" class="no-underline d-block p-a-md color-gray-dark" title="Color themes">
 					<div class="text-center">
@@ -38,7 +38,7 @@
 	</div>
 </div>
 <style>
-	.round-card:hover {
-		background: white;
+	.round-card > a:hover {
+		color: #5E5E6A;
 	}
 </style>
