added icons exception to external link

--- a/src/scss/cagov/type.scss
+++ b/src/scss/cagov/type.scss
@@ -512,6 +512,7 @@ a.list-group-item {
 .footer-social-links a,
 img ~,
 svg ~,
+*[class*="ca-gov-icon-"],
 [class*="ca-gov-icon-"] ~,
 .pdf-link-icon ~ {
   .external-link-icon {
