--- a/src/_includes/modules/social-media-icons.html
+++ b/src/_includes/modules/social-media-icons.html
@@ -1,9 +1,9 @@
 <div class="socialsharer-container">
- <a class="ca-gov-icon-share-facebook" title="Share via Facebook"></a>
- <a class="ca-gov-icon-github" title="Share via GitHub"></a>
- <a class="ca-gov-icon-share-twitter" title="Share via Twitter"></a>
- <a class="ca-gov-icon-share-youtube" title="Share via Youtube"></a>
- <a class="ca-gov-icon-share-linkedin" title="Share via Linkedin"></a>
- <a class="ca-gov-icon-share-instagram" title="Share via Instagram"></a>
- <a class="ca-gov-icon-share-email" title="Share via email"></a>
+ <a class="ca-gov-icon-share-facebook" title="Facebook Link" href="https://www.facebook.com/"></a>
+ <a class="ca-gov-icon-github" title="GitHub Link" href="https://github.com/"></a>
+ <a class="ca-gov-icon-share-twitter" title="Twitter Link" href="https://twitter.com/"></a>
+ <a class="ca-gov-icon-share-youtube" title="Youtube Link" href="https://www.youtube.com/"></a>
+ <a class="ca-gov-icon-share-linkedin" title="Linkedin Link" href="https://www.linkedin.com/"></a>
+ <a class="ca-gov-icon-share-instagram" title="Instagram Link" href="https://www.instagram.com/"></a>
+ <a class="ca-gov-icon-share-email" title="Email Link" href="mailto:your_email@ca.gov"></a>
 </div>
