Update homepage, contact-us, sitemap

--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -1,9 +1,25 @@
-<div class="py-2"style="background:linear-gradient(116.74deg, #323A45 -40.07%, #046B99 66.75%);">
+<div style="background:linear-gradient(116.74deg, #323A45 -40.07%, #046B99 66.75%);">
 	<div class="container">
-		<div class="pb-3" style="max-width: 675px;">
-			<h2 class="mt-4 mb-2 text-white">Partner with us</h2>
-			<p class="text-white pb-3">Improvements to the State Web Template and the Design System  are largely driven by your feedback. 
+		<div class="row">
+			<div class="half">
+				<div class="pb-3" style="max-width: 675px;">
+					<h2 class="mt-4 mb-2 text-white">Partner with us</h2>
+					<p class="text-white pb-3">Improvements to the State Web Template and the Design System  are largely driven by your feedback. 
 We’d love to hear from you!</p>
+				</div>
+			</div>
+			<div class="half" style="padding-left: 200px">
+				<svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 395 153">
+					<mask id="a" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="395" height="153"><path fill="#D9D9D9" d="M0 0H395V153H0z"/></mask>
+					<g mask="url(#a)" stroke-miterlimit="10" stroke-linejoin="round"><path d="M371 7.7 118.8-92 236.3 17.6 371 7.7Z" stroke="#3689AD" stroke-width="2"/><path d="M118.8-92.1 236.3 17.6 0 86.8l118.8-179Z" stroke="#3689AD" stroke-width="2"/><path d="m371 7.7-134.7 10V151L371 7.7Z" fill="url(#b)" fill-opacity=".4" stroke="#3689AD" stroke-width="2"/><path d="M236.3 151.1V17.6L0 86.8l236.3 64.3Z" stroke="#3689AD" stroke-width="2"/><path d="m391 56.2-53.3 2.6L289 76.2l57.7-3 44.3-17Z" fill="url(#c)" stroke="#FECD61"/><path d="m346.7 73.2 44.3-17-27.4 64.8-16.9-47.8Z" fill="url(#d)" stroke="#FECD61"/><path d="m363.6 121-16.9-47.8-57.7 3 74.6 44.7Z" fill="url(#e)" stroke="#FECD61"/></g>
+					<defs>
+						<linearGradient id="b" x1="236" y1="151.3" x2="324.6" y2="-17" gradientUnits="userSpaceOnUse"><stop stop-color="#fff" stop-opacity=".1"/><stop offset="1" stop-color="#fff"/></linearGradient>
+						<linearGradient id="c" x1="329.7" y1="70" x2="444.2" y2="24.7" gradientUnits="userSpaceOnUse"><stop stop-color="#FDB81E"/><stop offset="1" stop-color="#fff"/></linearGradient>
+						<linearGradient id="d" x1="312" y1="142.3" x2="374.4" y2="32.2" gradientUnits="userSpaceOnUse"><stop stop-color="#323A45"/><stop offset=".5" stop-color="#FDB81E"/><stop offset="1" stop-color="#FFFEFD"/><stop offset="1" stop-color="#fff"/><stop offset="1" stop-color="#fff"/></linearGradient>
+						<linearGradient id="e" x1="326.3" y1="73.2" x2="333.7" y2="226.8" gradientUnits="userSpaceOnUse"><stop stop-color="#FDB81E"/><stop offset="1" stop-color="#323A45"/></linearGradient>
+					</defs>
+				</svg>
+			</div>
 		</div>
 		<div class="row">
 			<div class="third m-b-md">
@@ -14,7 +30,7 @@ We’d love to hear from you!</p>
 
 					<div class="p-a align-self-center">
 						<p class="text-white">Have an idea or an issue?<br>
-							<a class="text-white" href="">Reach out in GitHub</a>
+							<a class="text-white" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/issues">Reach out in GitHub</a>
 						</p>
 					</div>
 				</div>
@@ -28,7 +44,7 @@ We’d love to hear from you!</p>
 
 					<div class="p-a align-self-center">
 						<p class="text-white">Want to give website feedback?<br>
-							<a class="text-white" href="">Fill out this form</a>
+							<a class="text-white" href="https://airtable.com/shro9V6ry2Cf4mpgG">Fill out this form</a>
 						</p>
 					</div>
 				</div>
@@ -42,7 +58,7 @@ We’d love to hear from you!</p>
 
 					<div class="p-a align-self-center">
 						<p class="text-white">Need template support?<br>
-							<a class="text-white" href="">Email the team</a>
+							<a class="text-white" href="/contact-us.html">Email the team</a>
 						</p>
 					</div>
 				</div>
