--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -1,4 +1,4 @@
-<aside class="p-b-md p-t-sm section-standout">
+<aside class="p-b-md p-t-sm section-standout site-footer">
  <div class="container">
   <div class="row">
    <div class="col-md-4">
