--- a/src/_includes/modules/section-icon-blocks.html
+++ b/src/_includes/modules/section-icon-blocks.html
@@ -7,7 +7,7 @@
 				<a href="/components.html" class="no-underline d-block p-a-md color-gray-dark"
 					title="Browse components">
 					<div class="text-center">
-						<img class="image-icon rounded-50x m-b" src="/images/browse-components.svg" alt="" style="width:138px;">
+						<img class="image-icon rounded-50x m-b" height="155px" src="/images/browse-components.svg" alt="" style="width:138px;">
 						<h2 class="h5 m-b-sm m-t-0">Browse components</h2>
 					</div>
 				</a>
@@ -17,7 +17,7 @@
 				<!-- Icon Blocks -->
 				<a href="/visual-design/icons.html#Search-icons" class="no-underline d-block p-a-md color-gray-dark" title="Search icons">
 					<div class="text-center">
-						<img class="image-icon rounded-50x m-b" src="/images/search-icons.svg" alt="" style="width:138px;">
+						<img class="image-icon rounded-50x m-b" height="155px" src="/images/search-icons.svg" alt="" style="width:138px;">
 						<h2 class="h5 m-b-sm m-t-0">Search icons</h2>
 					</div>
 				</a>
@@ -27,7 +27,7 @@
 				<!-- Icon Blocks -->
 				<a href="/visual-design/color.html#ColorThemes" class="no-underline d-block p-a-md color-gray-dark" title="Color themes">
 					<div class="text-center">
-						<img class="image-icon rounded-50x m-b" src="/images/explore-color-themes.svg" alt="" style="width:138px;">
+						<img class="image-icon rounded-50x m-b" height="155px" src="/images/explore-color-themes.svg" alt="" style="width:138px;">
 						<h2 class="h5 m-b-sm m-t-0">Explore color themes</h2>
 					</div>
 				</a>
