--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -25,7 +25,7 @@ We’d love to hear from you!</p>
 			<div class="third m-b-md">
 				<div class="d-flex">
 					<div class="m-b-0">
-						<img class="p-1" src="/images/idea-icon.svg" alt="Image Description">
+						<img class="p-1" height="120px" src="/images/idea-icon.svg" alt="Image Description">
 					</div>
 
 					<div class="p-a align-self-center">
@@ -39,7 +39,7 @@ We’d love to hear from you!</p>
 			<div class="third m-b-md">
 				<div class="d-flex">
 					<div class="m-b-0">
-						<img class="p-1" src="/images/feedback-icon.svg" alt="Image Description">
+						<img class="p-1" height="120px" src="/images/feedback-icon.svg" alt="Image Description">
 					</div>
 
 					<div class="p-a align-self-center">
@@ -53,7 +53,7 @@ We’d love to hear from you!</p>
 			<div class="third m-b-md">
 				<div class="d-flex">
 					<div class="m-b-0">
-						<img class="p-1" src="/images/support-icon.svg" alt="Image Description">
+						<img class="p-1" height="120px" src="/images/support-icon.svg" alt="Image Description">
 					</div>
 
 					<div class="p-a align-self-center">
