--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -6,7 +6,7 @@
       <div class="h-100 bg-gray-100 bg-gray-50-hover pos-rel">
 
         <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
-          <img class="p-4" src="/images/pattern-icon.svg" alt="Image Description">
+          <img class="p-4" height="155px" src="/images/pattern-icon.svg" alt="">
         </div>
 
         <div class="p-a-md">
@@ -24,7 +24,7 @@
       <div class="h-100 bg-gray-100 bg-gray-50-hover pos-rel">
 
         <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
-          <img class="p-4" src="/images/nav-icon.svg" alt="Image Description">
+          <img class="p-4" height="155px" src="/images/nav-icon.svg" alt="">
         </div>
 
         <div class="p-a-md">
@@ -42,7 +42,7 @@
       <div class="h-100 bg-gray-100  bg-gray-50-hover pos-rel">
 
         <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
-          <img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
+          <img class="p-4" height="155px" src="/images/refreshed-icon.svg" alt="">
         </div>
         <div class="p-a-md">
           <h3 class="h4 m-t-0 m-b-sm">
