--- a/src/_includes/layouts/search.njk
+++ b/src/_includes/layouts/search.njk
@@ -89,7 +89,7 @@
 
     <script>
         // Search ID
-        var cx = '001779225245372747843:9s-idxui5pk';// Update this value with your search engine unique ID. Submit a request to the CDT Service Desk if you don't already know your unique search engine ID.
+        var cx = '05e92f21f387b4800';// Update this value with your search engine unique ID. Submit a request to the CDT Service Desk if you don't already know your unique search engine ID.
         var gcse = document.createElement('script');
         gcse.type = 'text/javascript';
         gcse.async = true;
