updated figure cation styles #474

--- a/src/scss/colortheme/cs-media.scss
+++ b/src/scss/colortheme/cs-media.scss
@@ -4,6 +4,6 @@
 ----------------------------------------- */
 
 figure {
-    background-color: $figure-bg;
-    border-color: $figure-border;
+    background-color: $white;
+    border-color: $gray-200;
 }
