--- a/src/scss/cagov/sections.scss
+++ b/src/scss/cagov/sections.scss
@@ -56,6 +56,14 @@ pre {
 	padding:$spacer
 	}
 
+textarea.sourcecode {
+    font-family: var(--bs-font-monospace);
+    width:100%;
+    height:300px;
+    font-size: 0.875em;
+    white-space: pre;
+    }
+
 .parallax-bg {
     position: relative;
     background-attachment: fixed;
