--- a/src/scss/cagov/alert-banner.scss
+++ b/src/scss/cagov/alert-banner.scss
@@ -5,7 +5,7 @@
 
 .alert-banner {
     margin-bottom: 0;
-    padding: 5px 0;
+    padding: .6rem 0 .5rem 0;
     border-radius: 0;
     -webkit-column-rule: $text-field-color;
     -moz-column-rule: $text-field-color;
@@ -13,16 +13,25 @@
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
 
+    .alert-icon {
+    font-size: 1.75rem;
+    position: absolute;
+    top: 2px;
+    }
+
+    .alert-icon ~ .alert-text {
+     margin-left: 2.5rem;
+    }
+
     .close {
-        position: relative;
-        top: 4px;
-        right: -5px;
+        position: absolute;
+        top: 5px;
+        right: 5px;
         padding: 0 10px;
         text-shadow: none;
         float: right;
         font-size: 1.5rem;
         font-weight: 700;
-        line-height: 1;
         border: none;
         background: none;
     }
@@ -40,7 +49,6 @@
 
     .alert-text {
         position: relative;
-        top:2px;
     }
 
     .btn {
