--- a/src/scss/colortheme/pasorobles-import.scss
+++ b/src/scss/colortheme/pasorobles-import.scss
@@ -36,6 +36,7 @@
 @import "cs-page-navigation.scss";
 @import "cs-step-list.scss";
 @import "cs-accordion-sidenav.scss";
+@import "cs-alert.scss";
 @import "cs-link-grid.scss";
 @import "cs-blockquote.scss";
 @import "cs-utility.scss";
