fixed tabs accessibility

--- a/src/_includes/modules/nav-dropdown.html
+++ b/src/_includes/modules/nav-dropdown.html
@@ -3,7 +3,7 @@
  <ul id="nav_list" class="top-level-nav">
 
 
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/getting-started.html" class="first-level-link">Getting Started</a>
    <div class="sub-nav">
 
@@ -29,7 +29,7 @@
   </li>
 
 
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/visual-design.html" class="first-level-link">Visual Design</a>
    <div class="sub-nav">
 
@@ -48,7 +48,7 @@
   </li>
 
 
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/" class="first-level-link">Components</a>
    <div class="sub-nav">
 
@@ -67,7 +67,7 @@
 
 
 
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/patterns.html" class="first-level-link">Patterns</a>
    <div class="sub-nav">
     <ul class="second-level-nav">
@@ -85,7 +85,7 @@
 
 
 
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/about.html" class="first-level-link">About</a>
    <div class="sub-nav">
     <ul class="second-level-nav">
