--- a/src/_includes/modules/nav-flex.html
+++ b/src/_includes/modules/nav-flex.html
@@ -1,6 +1,6 @@
 <nav id="navigation" class="main-navigation megadropdown auto-highlight">
  <ul id="nav_list" class="top-level-nav">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a class="first-level-link">Getting Started</a>
    <div class="sub-nav">
     <div class="second-level-nav flex">
@@ -38,7 +38,7 @@
    </div>
   </li>
 
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/visual-design.html" class="first-level-link">Visual Desing</a>
    <div class="sub-nav">
     <div class="second-level-nav flex">
@@ -58,7 +58,7 @@
 
    </div>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/components.html" class="first-level-link">Components</a>
    <div class="sub-nav">
     <div class="second-level-nav flex">
@@ -83,7 +83,7 @@
    </div>
   </li>
 
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/patterns.html" class="first-level-link">Patterns</a>
    <div class="sub-nav">
     <div class="second-level-nav flex">
@@ -108,7 +108,7 @@
    </div>
   </li>
 
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="/about.html" class="first-level-link">About</a>
    <div class="sub-nav">
     <div class="second-level-nav flex with-border">
