--- a/src/_includes/modules/nav-icons.html
+++ b/src/_includes/modules/nav-icons.html
@@ -7,12 +7,12 @@ Options are: megadropdown dropdown singlelevel
 
 <nav id="navigation" class="main-navigation singlelevel justify-content-end">
  <ul id="nav_list" class="top-level-nav">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="#" target="_blank" class="first-level-link"><span class="ca-gov-icon-ca-state"
      aria-hidden="true"></span>Link
     1</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a href="#" class="first-level-link"><span class="ca-gov-icon-ca-capitol" aria-hidden="true"></span>link 2</a>
   </li>
   <li class="nav-item" id='nav-item-search'>
