--- a/src/_includes/modules/tabs-responsive.html
+++ b/src/_includes/modules/tabs-responsive.html
@@ -1,12 +1,12 @@
 <div class="tab-group responsive">
  <ul id="tabs" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-home" href="#pane-home" class="nav-link active" data-bs-toggle="tab" role="tab">Location</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-profile" href="#pane-profile" class="nav-link" data-bs-toggle="tab" role="tab">Context</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-messages" href="#pane-messages" class="nav-link" data-bs-toggle="tab" role="tab">Communication</a>
   </li>
  </ul>
