updated lead text #765

--- a/src/scss/cagov/type.scss
+++ b/src/scss/cagov/type.scss
@@ -190,6 +190,7 @@ p {
 .lead {
  font-size: $font-size-large;
  margin-bottom: 1rem;
+ font-weight: $font-weight-5;
  @include media-breakpoint-up(sm) {
   font-size: calc(#{$font-size-large} + #{$ratio});
   margin-bottom: calc(1rem + #{$ratio});
