--- a/src/_includes/modules/table-bordered.html
+++ b/src/_includes/modules/table-bordered.html
@@ -10,21 +10,21 @@
  <tbody>
   <tr>
    <td>1</td>
-   <td>Mark</td>
-   <td>Otto</td>
-   <td>@mdo</td>
+   <td>Alpha</td>
+   <td>One</td>
+   <td>@alphaone</td>
   </tr>
   <tr>
    <td>2</td>
-   <td>Jacob</td>
-   <td>Thornton</td>
-   <td>@jthornton</td>
+   <td>Beta</td>
+   <td>Two</td>
+   <td>@betatwo</td>
   </tr>
   <tr>
    <td>3</td>
-   <td>Larry</td>
-   <td>the Bird</td>
-   <td>@twitter</td>
+   <td>Charlie</td>
+   <td>Three</td>
+   <td>@charliethree</td>
   </tr>
  </tbody>
 </table>
