--- a/src/_includes/modules/table-striped.html
+++ b/src/_includes/modules/table-striped.html
@@ -9,22 +9,22 @@
  </thead>
  <tbody>
   <tr>
-   <td>1</td>
-   <td>Mark</td>
-   <td>Otto</td>
-   <td>@mdo</td>
-  </tr>
-  <tr>
-   <td>2</td>
-   <td>Jacob</td>
-   <td>Thornton</td>
-   <td>@jthornton</td>
-  </tr>
-  <tr>
-   <td>3</td>
-   <td>Larry</td>
-   <td>the Bird</td>
-   <td>@twitter</td>
-  </tr>
+    <td>1</td>
+    <td>Alpha</td>
+    <td>One</td>
+    <td>@alphaone</td>
+   </tr>
+   <tr>
+    <td>2</td>
+    <td>Beta</td>
+    <td>Two</td>
+    <td>@betatwo</td>
+   </tr>
+   <tr>
+    <td>3</td>
+    <td>Charlie</td>
+    <td>Three</td>
+    <td>@charliethree</td>
+   </tr>
  </tbody>
 </table>
