updated alert page

--- a/src/scss/cagov/alert-banner.scss
+++ b/src/scss/cagov/alert-banner.scss
@@ -23,6 +23,12 @@
      margin-left: 2.5rem;
     }
 
+    img, .alert-img {
+     max-width: 30px;
+     max-height: 30px;
+     margin-right: .5rem;
+    }
+
     .close {
         position: absolute;
         top: 5px;
