--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -25,12 +25,12 @@ We’d love to hear from you!</p>
 			<div class="third m-b-md">
 				<div class="d-flex">
 					<div class="m-b-0">
-						<img class="p-1" height="120px" src="/images/idea-icon.svg" alt="Image Description">
+						<img class="p-1" height="120px" src="/images/idea-icon.svg" alt="">
 					</div>
 
 					<div class="p-a align-self-center">
 						<p class="text-white">Have an idea or an issue?<br>
-							<a class="text-white" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/issues">Reach out in GitHub</a>
+							<a class="partner-link text-white" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/issues">Reach out in GitHub</a>
 						</p>
 					</div>
 				</div>
@@ -39,12 +39,12 @@ We’d love to hear from you!</p>
 			<div class="third m-b-md">
 				<div class="d-flex">
 					<div class="m-b-0">
-						<img class="p-1" height="120px" src="/images/feedback-icon.svg" alt="Image Description">
+						<img class="p-1" height="120px" src="/images/feedback-icon.svg" alt="">
 					</div>
 
 					<div class="p-a align-self-center">
 						<p class="text-white">Want to give website feedback?<br>
-							<a class="text-white" href="https://airtable.com/shro9V6ry2Cf4mpgG">Fill out this form</a>
+							<a class="partner-link text-white" href="https://airtable.com/shro9V6ry2Cf4mpgG">Fill out this form</a>
 						</p>
 					</div>
 				</div>
@@ -53,12 +53,12 @@ We’d love to hear from you!</p>
 			<div class="third m-b-md">
 				<div class="d-flex">
 					<div class="m-b-0">
-						<img class="p-1" height="120px" src="/images/support-icon.svg" alt="Image Description">
+						<img class="p-1" height="120px" src="/images/support-icon.svg" alt="">
 					</div>
 
 					<div class="p-a align-self-center">
 						<p class="text-white">Need template support?<br>
-							<a class="text-white" href="/contact-us.html">Email the team</a>
+							<a class="partner-link text-white" href="/contact-us.html">Email the team</a>
 						</p>
 					</div>
 				</div>
@@ -66,3 +66,12 @@ We’d love to hear from you!</p>
 		</div>
 	</div>
 </div>
+
+<style>
+	.partner-link {
+		text-decoration: none!important;
+	}
+	.partner-link:hover {
+		text-decoration: underline!important;
+	}
+</style>
