--- a/src/_includes/modules/timeline-angled.html
+++ b/src/_includes/modules/timeline-angled.html
@@ -90,6 +90,10 @@
     .dot-line::before {
         border-top-width: 2px;
     }
+    .dot-line-inner {
+        border-width: 2px;
+        border-color: #BCBBC1 !important;
+    }
     @media (max-width: 767px) {
         .dot-text,
         .timeline-lines {
