--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -10,7 +10,7 @@
 				</div>
 			</div>
 			<div class="col-sm my-auto">
-				<img width="600px" src="/images/header-bear.webp" alt="">
+				<img width="600px" src="/images/header-bear.png" alt="">
 			</div>
 		</div>
 	</div>
