updated alert banner spacing, and text #602, #761

--- a/src/scss/cagov/alert-banner.scss
+++ b/src/scss/cagov/alert-banner.scss
@@ -24,9 +24,10 @@
     }
 
     img, .alert-img {
-     max-width: 30px;
-     max-height: 30px;
+     max-width: 28px;
+     max-height: 28px;
      margin-right: .5rem;
+     margin-top:-3px;
     }
 
     .close {
