--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -59,6 +59,7 @@ $white: #fff;
 
 // Design System Gray colors
 $gray-50: #fafafa;
+$gray-75: #f3f3f4;
 $gray-100: #ededef;
 $gray-200: #d4d4d7;
 $gray-300: #bcbbc1;
