--- a/src/scss/cagov/accordion-side-nav.scss
+++ b/src/scss/cagov/accordion-side-nav.scss
@@ -63,13 +63,13 @@ cagov-accordion.sidenav {
   //SUMMARY
   summary {
    border: none;
-   background: transparent;
+   background: $white;
    padding-left: 1rem;
    padding: 0.7rem 2rem 0.7rem 1rem;
-   font-size: calc($font-size-regular + $ratio);
+   font-size: calc(1rem + $ratio);
    font-weight: 400;
-   //color: #046b99;
    text-decoration: none;
+   border-bottom: 1px solid $gray-100;
    &:before {
     border: none !important;
     width: 3px;
@@ -82,6 +82,7 @@ cagov-accordion.sidenav {
    &:hover,
    &:focus {
     text-decoration: none;
+    background-color: $gray-50;
     &:before {
      border: none;
      background-color: transparent;
@@ -95,9 +96,10 @@ cagov-accordion.sidenav {
 
    // ACTIVE STATE
    &.active {
-    font-weight: $font-weight-7;
     color: $black !important;
     text-decoration: none;
+    background-color: $gray-75;
+    font-weight: 400;
     &:before {
      border: none;
      width: 3px;
@@ -107,6 +109,7 @@ cagov-accordion.sidenav {
     &:focus {
      color: $gray-700 !important;
      text-decoration: none;
+     background-color: $gray-100;
     }
     &:focus {
      @include outline(2px);
@@ -118,7 +121,6 @@ cagov-accordion.sidenav {
    &[open] {
     summary {
      color: $black;
-     font-weight: 700;
 
      &::after {
       display: none;
@@ -128,15 +130,18 @@ cagov-accordion.sidenav {
 
    .cagov-open-indicator {
     left: unset !important;
-    right: 1rem;
-    top: 1.4rem !important;
-   }
+    right: 2.7rem;
+    top: 0.6rem !important;
+     &::before {
+      font-size: 2.4rem;
+     }
+    }
   }
 
   .cagov-open-indicator {
    left: unset;
-   right: 1rem;
-   top: 1.4rem !important;
+   right: 2.7rem;
+   top: 0.6rem !important;
   }
 
   .accordion-body {
@@ -146,7 +151,7 @@ cagov-accordion.sidenav {
 
    .side-subnav {
     margin-bottom: 0;
-    margin-left: 1rem;
+    margin-left: 0;
     li {
      &:first-child {
       margin-top: 0;
@@ -172,21 +177,23 @@ cagov-accordion.sidenav {
    display: block;
    padding-top: 0.7rem;
    padding-bottom: 0.7rem;
-   padding-left: 1rem;
+   padding-left: 2.5rem;
    text-decoration: none !important;
+   border-bottom: 1px solid $gray-100;
    &:hover,
    &:focus {
     text-decoration: none;
     color: $black;
+    background-color: $gray-50;
    }
    &:focus {
     @include outline(2px);
     outline-offset: -2px;
    }
    &.active {
-    font-weight: 700;
-    color: $gray-800;
+    color: $gray-700;
     text-decoration: none;
+    background-color: $gray-75;
     &:before {
      content: "";
      border-left: 3px solid;
@@ -201,6 +208,7 @@ cagov-accordion.sidenav {
     &:focus {
      color: $black;
      text-decoration: none;
+     background-color: $gray-100;
     }
    }
   }
