--- a/src/_includes/modules/side-navigation-level1.html
+++ b/src/_includes/modules/side-navigation-level1.html
@@ -4,7 +4,7 @@
   <li><a href="javascript:;">Page 1</a></li>
   <li><a href="javascript:;">Page 2</a></li>
   <li><a href="javascript:;">Page 3</a></li>
-  <li><a href="javascript:;">Page 4</a></li>
+  <li><a href="javascript:;">Page 4 section landing</a></li>
   <li><a href="javascript:;">Page 5</a></li>
  </ul>
 </nav>
