--- a/src/_includes/modules/side-navigation-level2.html
+++ b/src/_includes/modules/side-navigation-level2.html
@@ -1,16 +1,16 @@
 <nav aria-label="list navigation">
  <ul class="list-navigation">
-  <li><a href="#" class="landing">Landing page</a></li>
-  <li><a href="#">Page 1</a></li>
-  <li><a href="#">Page 2</a></li>
-  <li><a href="#">Page 3</a></li>
-  <li><a href="#" class="active">Page 4 section landing</a>
+  <li><a href="javascript:;" class="landing">Landing page</a></li>
+  <li><a href="javascript:;">Page 1</a></li>
+  <li><a href="javascript:;">Page 2</a></li>
+  <li><a href="javascript:;">Page 3</a></li>
+  <li><a href="javascript:;" class="active">Page 4 section landing</a>
    <ul>
-    <li><a href="#">Page A</a></li>
-    <li><a href="#">Page B section landing</a></li>
-    <li><a href="#">Page C</a></li>
+    <li><a href="javascript:;">Page A</a></li>
+    <li><a href="javascript:;">Page B section landing</a></li>
+    <li><a href="javascript:;">Page C</a></li>
    </ul>
   </li>
-  <li><a href="#">Page 5</a></li>
+  <li><a href="javascript:;">Page 5</a></li>
  </ul>
 </nav>
