--- a/src/_includes/modules/side-navigation-level3.html
+++ b/src/_includes/modules/side-navigation-level3.html
@@ -1,8 +1,8 @@
 <nav aria-label="list navigation">
  <ul class="list-navigation">
-  <li><a href="#" class="landing back">Page 4 section landing</a></li>
-  <li><a href="#" class="active">Page A</a></li>
-  <li><a href="#">Page B section landing</a></li>
-  <li><a href="#">Page C</a></li>
+  <li><a href="javascript:;" class="landing back">Page 4 section landing</a></li>
+  <li><a href="javascript:;" class="active">Page A</a></li>
+  <li><a href="javascript:;">Page B section landing</a></li>
+  <li><a href="javascript:;">Page C</a></li>
  </ul>
 </nav>
