updated cdn page #672

--- a/src/scss/cagov/globals.scss
+++ b/src/scss/cagov/globals.scss
@@ -447,6 +447,12 @@ background-color: $outline-default-color !important;
  background-color: $gray-50 !important;
 }
 
+.bg-gray-75,
+.bg-gray-75-hover:hover,
+.bg-gray-75-hover:focus {
+ background-color: $gray-75 !important;
+}
+
 .bg-gray-100,
 .bg-gray-100-hover:hover,
 .bg-gray-100-hover:focus {
