added on this page styles #831

--- a/src/scss/cagov/icon-font.scss
+++ b/src/scss/cagov/icon-font.scss
@@ -26,6 +26,12 @@
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
 }
+.ca-gov-icon-bullet:before {
+ content: "\ea32";
+}
+.ca-gov-icon-dot:before {
+ content: "\ea33";
+}
 .ca-gov-icon-water:before {
  content: "\ea2a";
 }
