--- a/src/scss/cagov/page-navigation.scss
+++ b/src/scss/cagov/page-navigation.scss
@@ -93,42 +93,50 @@
 
 // Page navigation (On this page)
 .page-navigation {
+ margin-bottom: 1.5rem;
+ padding-bottom: .75rem;
+ border-bottom: 1px solid $gray-200;
+ width: 100%;
+ @media (min-width: $screen-md-min) { 
+  width: 80%;
+ }
  .label {
   font-weight: $font-weight-7;
-  font-size: 1.5rem;
+  font-size: $font-size-regular;
   line-height: $font-lineheight-5;
   padding: 0;
   margin: 0;
-  padding-bottom: 1rem;
+  padding-bottom: 0;
  }
  ul {
   margin: 0;
   text-indent: 0;
   padding: 0;
+  &.columns-2 {
+   columns: 2;
+  }
+  &.columns-3 {
+   columns: 3;
+  }
   li {
    list-style: none;
    padding: 0;
    margin: 0;
-   border-bottom: 1px solid $gray-200;
-   &:first-child {
-    border-top: 1px solid $gray-200;
-   }
+   margin-bottom: .3rem;
+   font-size: $font-size-h6; // ~14px
+
+
    a {
-    color: $gray-800;
-    text-decoration: none !important;
-    padding-top: 1rem;
-    padding-bottom: 1.25rem;
     display: block;
-    &:hover,
-    &:focus {
-     text-decoration: none !important;
-     color: $black;
-    }
-    &:focus {
-     @include outline(2px);
-    }
-    &.active {
-     font-weight: $font-weight-7;
+    position: relative;
+    padding-left: 1.5rem;
+    &::before {
+     content: "\ea33";
+      font-family: "CaGov";
+      position: absolute;
+      font-size: 1.5rem;
+      left: 0;
+      top: -0.4rem;
     }
    }
   }
