fixed page nav and side nav styles

--- a/src/scss/cagov/page-navigation.scss
+++ b/src/scss/cagov/page-navigation.scss
@@ -22,9 +22,9 @@
 &.landing {
  font-weight: $font-weight-7;
  &.active {
-  background-color: $white;
+  background-color: $gray-75;
   &:hover, &:focus {
-   background-color: $gray-50;
+   background-color: $gray-100;
   }
  }
  &.back {
@@ -127,7 +127,7 @@
 
 
    a {
-    display: block;
+    display: inline-block;
     position: relative;
     padding-left: 1.5rem;
     &::before {
