--- a/src/scss/cagov/tables.scss
+++ b/src/scss/cagov/tables.scss
@@ -21,6 +21,7 @@ table.editor-table-striped {
 /* End Rich Text Editor */
 
 .table {
+    color: $gray-900;
     // The official table style design for CA.gov
     &.table-default {
         border: none;
