Update bg gradiant page, update text accent page

--- a/src/scss/bootstrap/scss/_variables.scss
+++ b/src/scss/bootstrap/scss/_variables.scss
@@ -691,7 +691,7 @@ $table-cell-padding-x-sm:     .25rem !default;
 
 $table-cell-vertical-align:   top !default;
 
-$table-color:                 $body-color !default;
+$table-color:                 $gray-800; //$body-color !default;
 $table-bg:                    transparent !default;
 $table-accent-bg:             transparent !default;
 
