--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -16,3 +16,13 @@
 	</div>
 </div>
 </div>
+<style>
+	@media (max-width: 991px) {
+		.header-primary-banner .row {
+				flex-direction: column-reverse;
+		}
+		.header-primary-banner img {
+				width: 100%;
+		}
+	}
+</style>
