--- a/src/_includes/modules/timeline-angled.html
+++ b/src/_includes/modules/timeline-angled.html
@@ -12,7 +12,6 @@
         <div class="row timeline-lines">
             <div class="col-sm-3" style="margin-top:-1rem;">
                 <!-- Static Process -->
-                <div class="">
                     <i class="dot-line brd-transparent-before brd-primary-light-after">
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
@@ -20,13 +19,11 @@
                         <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2021</h3>
                         <p class="mb-4">Release the beta version of the new statewide Design System</p>
                     </div>
-                </div>
                 <!-- End Static Process -->
             </div>
 
             <div class="col-sm-3" style="margin-top:-1rem;">
                 <!-- Static Process -->
-                <div class="">
                     <i class="dot-line brd-primary-light-before brd-primary-light-after">
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
@@ -34,13 +31,11 @@
                         <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2022</h3>
                         <p class="mb-4">Update the State Web Template V6 to align with the Design System</p>
                     </div>
-                </div>
                 <!-- End Static Process -->
             </div>
 
             <div class="col-sm-3" style="margin-top:-1rem;">
                 <!-- Static Process -->
-                <div class="">
                     <i class="dot-line brd-primary-light-before brd-gray-light-after">
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
@@ -48,13 +43,11 @@
                         <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2023</h3>
                         <p class="mb-4">Release the first production version of the Design System</p>
                     </div>
-                </div>
                 <!-- End Static Process -->
             </div>
 
             <div class="col-sm-3" style="margin-top:-1rem;">
                 <!-- Static Process -->
-                <div class="">
                     <i class="dot-line brd-gray-light-before brd-transparent-after">
                         <span class="dot-line-inner bg-grey-light brd-gray-light"></span>
                     </i>
@@ -62,7 +55,6 @@
                         <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2024+</h3>
                         <p class="mb-4">Continue to improve the Design System and support a transition to it</p>
                     </div>
-                </div>
                 <!-- End Static Process -->
             </div>
         </div>
@@ -100,4 +92,47 @@
             transform: rotate(0deg);
         }
     }
+    @media (max-width: 575px) {
+        .header-primary-banner .row {
+            flex-direction: column-reverse;
+        }
+        .header-primary-banner img {
+            width: 100%;
+        }
+        .dot-line {
+            position: relative;
+        }
+        .dot-text {
+            margin-left: 3.25rem;
+            margin-top: -3.75rem;
+            margin-bottom: 3rem;
+            position: relative;
+        }
+        .dot-text::before {
+            display: block;
+            content: '';
+            height: 200%;
+            width: 2px;
+            background: #BCBBC1;
+            position: absolute;
+            left: calc(-38px);
+            top: 6px;
+        }
+        .timeline-lines .col-sm-3:nth-last-of-type(2) .dot-text::before,
+        .timeline-lines .col-sm-3:last-of-type .dot-text::before {
+            background: #DDDDDD;
+        }
+    }
+/*
+        .dot-line::before, .dot-line::after {
+            display: block;
+            content: '';
+            rotate: 90deg;
+            position: absolute;
+            top: 38px;
+            left: calc(-50% + 15px);
+        }
+        .dot-text .h5 {
+            margin-top: 0;
+        }*/
 </style>
