--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -1,7 +1,7 @@
 <div class="header-primary-banner hidden-print"
 	style="background-image: url('/images/main-banner.svg');">
 	<div class="container">
-		<div class="row" style="margin-top: 2rem;">
+		<div class="row my-5">
 			<div class="col-sm my-auto">
 				<p>Enhance your websites and applications with the latest version (V6) of the <span style="color: #ffffff">State Template!</span></p>
 				<div class="btn-row p-b">
@@ -10,19 +10,19 @@
 				</div>
 			</div>
 			<div class="col-sm my-auto">
-				<img width="600px" src="/images/header-bear.png" alt="">
+				<img width="571px" src="/images/header-bear.png" alt="">
 			</div>
 		</div>
 	</div>
 </div>
 </div>
 <style>
-	@media (max-width: 991px) {
-		.header-primary-banner .row {
-				flex-direction: column-reverse;
-		}
-		.header-primary-banner img {
-				width: 100%;
-		}
+@media (max-width: 991px) {
+	.header-primary-banner .row {
+		flex-direction: column-reverse;
 	}
+	.header-primary-banner img {
+		width: 100%;
+	}
+}
 </style>
