added custom css fromt matter feature #947

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -11,6 +11,10 @@
 		<link rel="stylesheet" href="/css/colortheme-oceanside.min.css">
 {% endif %}
 
+{% if customcss %}
+ <link rel="stylesheet" href="{{customcss}}" />
+{% endif %}
+
 <link rel="apple-touch-icon-precomposed" sizes="100x100" href="/images/apple-touch-icon-precomposed.png">
 <link rel="icon" sizes="192x192" href="/images/apple-touch-icon-192x192.png">
 <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/images/apple-touch-icon-180x180.png">
