--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -2,8 +2,8 @@
 	<h2 class="p-t-1 p-b-3">Who's using the new design</h2>
 	<div class="row">
 		<div class="half m-b-md p-r-lg">
-			<div class="pos-rel m-b-0" style="max-height: 400px;overflow: hidden;background: #ffffff;text-align: center;border:1px solid #cecece;border-bottom: 3px solid #cecece">
-				<img style="width:100%;" src="/images/bbfa-example.jpg" alt="Image Description">
+			<div class="pos-rel m-b-0 overflow-hidden bg-white text-center" style="max-height: 400px;border:1px solid #cecece;border-bottom: 3px solid #cecece">
+				<img class="w-100" src="/images/bbfa-example.jpg" alt="Homepage screenshot of Broadband for all website.">
 			</div>
 
 			<div class="pt-3" style="min-height: 236px;">
@@ -23,8 +23,8 @@
 		</div>
 
 		<div class="half m-b-md p-l-lg">
-			<div class="pos-rel m-b-0" style="max-height: 400px;overflow: hidden;background: #ffffff;text-align: center;border:1px solid #cecece;border-bottom: 3px solid #cecece">
-				<img style="width:100%;" src="/images/caaba-example.jpg" alt="Image Description">
+			<div class="pos-rel m-b-0 overflow-hidden bg-white text-center" style="max-height: 400px;border:1px solid #cecece;border-bottom: 3px solid #cecece">
+				<img class="w-100" src="/images/caaba-example.jpg" alt="Homepage screenshot of California's Abortion Access Portal website.">
 			</div>
 
 			<div class="pt-3" style="min-height: 236px;">
@@ -42,10 +42,3 @@
 		</div>
 	</div>
 </div>
-</div>
-
-<style>
-.font-weight-bold {
-	font-weight: 500;
-}
-</style>
