updated settings URL #960

--- a/src/_includes/layouts/navicons-landing.njk
+++ b/src/_includes/layouts/navicons-landing.njk
@@ -14,7 +14,7 @@
         <a href="#main-content">Skip to Main Content</a>
     </div>
     {% include "../utility-header.njk" %}
-    {% include "../settings-bar.njk" %}
+    {% include "../settings.njk" %}
     {% include "../modules/branding.html" %}
     {% include "../mobile-controls.njk" %}
         <div class="navigation-search">
