--- a/src/_includes/layouts/search.njk
+++ b/src/_includes/layouts/search.njk
@@ -33,7 +33,7 @@
       {% include alert %}
     {% endif %}
     {% include "../utility-header.njk" %}
-    {% include "../settings-bar.njk" %}
+    {% include "../settings.njk" %}
     {% include "../site-header.njk" %}
     {% include "../mobile-controls.njk" %}
 
