--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -18,7 +18,7 @@
       {% include alert %}
     {% endif %}
     {% include "../utility-header.njk" %}
-    {% include "../settings-bar.njk" %}
+    {% include "../settings.njk" %}
     {% include "../site-header.njk" %}
     {% include "../mobile-controls.njk" %}
     <div class="navigation-search full-width-nav container">
