--- a/src/scss/cagov.core.scss
+++ b/src/scss/cagov.core.scss
@@ -85,7 +85,7 @@
 @import "cagov/testimonials.scss";
 @import "cagov/blockquote.scss";
 @import "cagov/button.scss";
-@import "cagov/settings-bar.scss";
+@import "cagov/settings.scss";
 @import "cagov/location-settings.scss";
 @import "cagov/service-profile.scss";
 @import "cagov/service-group.scss";
