updated on this page label color to gray-700

--- a/src/scss/cagov/page-navigation.scss
+++ b/src/scss/cagov/page-navigation.scss
@@ -97,6 +97,7 @@
  padding-bottom: .75rem;
  border-bottom: 1px solid $gray-200;
  .label {
+  color: $gray-700;
   font-weight: $font-weight-7;
   font-size: $font-size-regular;
   line-height: $font-lineheight-5;
